2009-06-19 Pierre Wieser <pwieser@trychlos.org>

	Getting NA (Nautilus Actions) as common objects prefix.

	* src/common/na-action.c:
	* src/common/na-action.h:
	* src/common/na-action-profile.c:
	* src/common/na-action-profile.h:
	* src/common/na-gconf.c:
	* src/common/na-gconf.h:
	* src/common/na-gconf-keys.h:
	* src/common/na-iio-provider.c:
	* src/common/na-iio-provider.h:
	* src/common/na-object.c:
	* src/common/na-object.h:
	* src/common/na-pivot.c:
	* src/common/na-pivot.h:
	* src/common/na-utils.c:
	* src/common/na-utils.h: Renamed and updated accordingly.

	* src/common/na-iio-provider.c:
	* src/common/na-iio-provider.h:
	* src/common/na-gconf.c:
	* src/common/na-pivot.c:
	na_iio_provider_load_actions renamed to na_iio_provider_read_actions.

	* src/nact/base-window.c:
	* src/nact/base-window.h:
	Define and implement new class BaseWindow.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h:
	Define and implement new interface NactIActionsList.

	* src/nact/nact-window.c:
	* src/nact/nact-window.h:
	Define and implement new class NactWindow.

	* src/nact/nact-wnd-actions.c:
	* src/nact/nact-wnd-actions.h:
	Define and implement new class NactWndActions.

	* src/common/Makefile.am:
	Updated accordingly.

2009-06-18 Pierre Wieser <pwieser@trychlos.org>

	Begin with porting NACT to new object hierarchy.

	* src/common/nact-action.c:
	* src/common/nact-action.h (nact_action_duplicate,
	nact_action_get_version, nact_action_get_icon,
	nact_action_set_new_uuid): New functions.

	* src/common/nact-iio-provider.c:
	* src/common/nact-iio-provider.h (+nact_iio_provider_write_action):
	New function.

	* src/common/nact-pivot.c:
	* src/common/nact-pivot.h (nact_pivot_get_label_sorted_actions,
	nact_pivot_get_action, nact_pivot_add_action):
	New functions.

	* src/nact/base-application.c:
	* src/nact/base-application.h: New base class.

	* src/nact/nact-application.c:
	* src/nact/nact-application.h: Updated accordingly.
